--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,15 +6,12 @@ pre-commit:
   parallel: true
   jobs:
     - name: fmt
-      run: cargo fmt
+      run: just fmt
 pre-push:
   parallel: true
   jobs:
-    - name: fmt
-      run: cargo fmt --check
-
-    - name: clippy
-      run: cargo clippy -- -D warnings
+    - name: lint
+      run: just lint
 
     - name: test
-      run: cargo test
+      run: just test
