--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 winnow = "0.7.14"
 yansi = "1.0.1"
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "columnate"
+harness = false
