--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ criterion = "0.5"
 [[bench]]
 name = "columnate"
 harness = false
+
+[[bench]]
+name = "split"
+harness = false
+
+[[bench]]
+name = "join"
+harness = false
