--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+csv = "1.3"
 clap = { version = "4.5.54", features = ["derive"] }
 crossterm = "0.29.0"
 regex = "1.12.2"
