--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,3 +54,4 @@ jobs:
       - uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b # ratchet:ncipollo/release-action@v1
         with:
           artifacts: "t-*.bz2"
+          generateReleaseNotes: true
